vlib/v/checker/tests/lock_already_locked.out
vlib/v/checker/tests/lock_already_locked.vv:11:9: error: `a` is already locked 
    9 |     }
   10 |     lock a {
   11 |         rlock a {
      |               ^
   12 |             a.x++
   13 |         }
